added flag to junit tests